Fix mobile aligning issues.

--- a/neat/static/style/screen.css
+++ b/neat/static/style/screen.css
@@ -76,6 +76,7 @@ pre code {
 
 .container {
     margin: 0 auto;
+    padding: 0 10px;
     max-width: 700px;
 }
 
@@ -102,11 +103,11 @@ article > header.float {
     -ms-box-sizing: border-box;
     -o-box-sizing: border-box;
     overflow: hidden;
-    padding: 0 8px 11px;
+    padding: 0 10px 11px;
     position: fixed;
     top: 0;
     max-width: 716px;
-    margin: 0 -8px;
+    margin: 0 -10px;
     width: 100%;
     z-index: 999;
     box-shadow: 0px 6px 10px 0px #888;
@@ -128,7 +129,7 @@ article > header.float {
 
 .content {
     min-height: 450px;
-    padding: 30px 0;
+    padding: 30px 10px;
 }
 
 .content article {
